buy box1 for 10 gold

--- a/static/style.css
+++ b/static/style.css
@@ -147,6 +147,48 @@ body {
     font-family: 'Pusia-bold', sans-serif;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 1.5); /* Тень текста */
 }
+.image-text_2 {
+    margin-right: 10px; /* Отступ между текстом и картинкой */
+    color: white;
+    font-family: 'Pusia-bold', sans-serif;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 1.5); /* Тень текста */
+}
+.modal {
+    display: none; /* Скрыто по умолчанию */
+    position: fixed; /* Остается на месте */
+    z-index: 1000; /* На переднем плане */
+    left: 0;
+    top: 0;
+    width: 100%; /* Полная ширина */
+    height: 100%; /* Полная высота */
+    overflow: auto; /* Включает прокрутку, если необходимо */
+    background-color: rgba(0, 0, 0, 0.7); /* Черный фон с прозрачностью */
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% сверху и центрирование */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Ширина окна */
+    max-width: 500px; /* Максимальная ширина окна */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Тень для эффекта поднятости */
+}
+
+.close-button {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close-button:hover,
+.close-button:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 
 .image-container img {
     width: 50px; /* Ширина картинки */
@@ -205,7 +247,7 @@ progress {
     position: fixed;
     bottom: 87px;
     left: 20px;
-    width: 95%;
+    width: 90%;
     height: 15px;
     border: none;
     background-color: #f3f3f3;
@@ -587,16 +629,18 @@ text-shadow: 1px 1px 2px rgba(0, 0, 0, 1.5); /* Тень текста */
 
 
 /* Страница Магазин */
-
+body.shop-page {
+    min-height: 150vh; /* Минимальная высота равная высоте окна браузера */
+}
 body {
     margin: 0; /* Убираем отступы по умолчанию */
 }
 
 .box_1 {
-    position: fixed; /* Фиксированное позиционирование */
+    position: relative; /* Изменено на относительное позиционирование */
     top: 130px; /* Расположение по вертикали */
     left: 20px; /* Расположение по горизонтали */
-    z-index: 1000; /* Уровень наложения */
+    z-index: 999; /* Уровень наложения */
     background-image: url('/static/images/theme_11.png'); /* Фоновое изображение */
     background-size: cover; /* Масштабирование фона, чтобы он заполнил контейнер */
     padding: 10px; /* Отступ внутри контейнера для текста и изображения */
@@ -692,10 +736,10 @@ body {
 
 
 .box_2 {
-    position: fixed; /* Фиксированное позиционирование */
-    top: 230px; /* Расположение по вертикали */
+    position: relative; /* Изменено на относительное позиционирование */
+    top: 140px; /* Расположение по вертикали */
     left: 20px; /* Расположение по горизонтали */
-    z-index: 1000; /* Уровень наложения */
+    z-index: 999; /* Уровень наложения */
     background-image: url('/static/images/theme_11.png'); /* Фоновое изображение */
     background-size: cover; /* Масштабирование фона, чтобы он заполнил контейнер */
     padding: 10px; /* Отступ внутри контейнера для текста и изображения */
@@ -791,10 +835,10 @@ body {
 
 
 .box_3 {
-    position: fixed; /* Фиксированное позиционирование */
-    top: 330px; /* Расположение по вертикали */
+    position: relative; /* Изменено на относительное позиционирование */
+    top: 150px; /* Расположение по вертикали */
     left: 20px; /* Расположение по горизонтали */
-    z-index: 1000; /* Уровень наложения */
+    z-index: 999; /* Уровень наложения */
     background-image: url('/static/images/theme_11.png'); /* Фоновое изображение */
     background-size: cover; /* Масштабирование фона, чтобы он заполнил контейнер */
     padding: 10px; /* Отступ внутри контейнера для текста и изображения */
@@ -849,10 +893,10 @@ body {
 
 
 .box_4 {
-    position: fixed; /* Фиксированное позиционирование */
-    top: 430px; /* Расположение по вертикали */
+    position: relative; /* Изменено на относительное позиционирование */
+    top: 160px; /* Расположение по вертикали */
     left: 20px; /* Расположение по горизонтали */
-    z-index: 1000; /* Уровень наложения */
+    z-index: 999; /* Уровень наложения */
     background-image: url('/static/images/theme_11.png'); /* Фоновое изображение */
     background-size: cover; /* Масштабирование фона, чтобы он заполнил контейнер */
     padding: 10px; /* Отступ внутри контейнера для текста и изображения */
@@ -955,6 +999,8 @@ body {
     transform: translateX(-50%); /* Сдвигаем на половину ширины контейнера для центрирования */
     display: flex; /* Используем flexbox для расположения изображений */
     gap: 10px; /* Расстояние между картинками */
+    z-index: 1000; /* Устанавливаем высокий z-index для отображения поверх других элементов */
+}
 }
 
 
@@ -1309,12 +1355,12 @@ position: center
     width: 100%;              /* Растягиваем контейнер на всю ширину */
     height: 100%;             /* Растягиваем контейнер на всю высоту родительского элемента */
     text-align: center;       /* Выравнивание текста по центру (если нужно) */
-    padding-top: 20px;       /* Отступ сверху для дополнительного пространства (по желанию) */
+    padding-top: 80px;       /* Отступ сверху для дополнительного пространства (по желанию) */
 }
 
 #mainImage {
-    max-width: 30%;           /* Уменьшаем изображение до 30% от ширины контейнера */
-    max-height: 30%;          /* Ограничиваем максимальную высоту изображения */
+    max-width: 40%;           /* Уменьшаем изображение до 30% от ширины контейнера */
+    max-height: 40%;          /* Ограничиваем максимальную высоту изображения */
     object-fit: contain;      /* Сохраняем пропорции изображения */
 }
 
@@ -1350,17 +1396,18 @@ position: center
 
 
 .fixed-window {
-    position: fixed;
-    bottom: 300px; /* Позиция внизу экрана, поднято на 20 пикселей */
+    position: relative;
+    bottom: 120px; /* Позиция внизу экрана, поднято на 20 пикселей */
     left: 50%; /* Центрирование по горизонтали */
     transform: translateX(-50%); /* Центрирование по горизонтали */
     background-image: url('/static/images/theme_11.png'); /* Фоновое изображение */
     color: white; /* Цвет текста */
-    padding: 20px; /* Отступы внутри окна */
+    padding: 10px; /* Отступы внутри окна */
     border-radius: 10px; /* Закругленные углы */
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5); /* Тень для эффекта поднятости */
-    width: 200px; /* Ширина окна */
-    height: 200px; /* Высота окна */
+    width: 175px; /* Ширина окна */
+    height: 170px; /* Высота окна */
+    z-index: 999;
 }
 
 .left-icon {
@@ -1376,7 +1423,7 @@ position: center
 }
 
 .icon_nita {
-    width: 50px; /* Ширина иконок (можете изменить) */
+    width: 45px; /* Ширина иконок (можете изменить) */
     height: auto; /* Автоматическая высота для сохранения пропорций */
     margin: 5px; /* Отступы между иконками */
 }
@@ -1394,7 +1441,7 @@ position: center
     border-radius: 10px; /* Закругленные углы */
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5); /* Тень для эффекта поднятости */
     position: fixed; /* Фиксированное позиционирование */
-    bottom: 550px; /* Поднимаем меню выше элемента .fixed-window */
+    bottom: 330px; /* Поднимаем меню выше элемента .fixed-window */
     left: 50%; /* Центрирование по горизонтали */
     transform: translateX(-50%); /* Центрирование по горизонтали */
 }
