--- a/templates/page1.html
+++ b/templates/page1.html
@@ -31,7 +31,7 @@
         <img src="/static/images/coin.png" alt="Картинка 1">
     </div>
     <div class="image-item">
-        <span class="image-text">0</span>
+        <span class="image-text_2">0</span>
         <img src="/static/images/bling.png" alt="Картинка 2">
     </div>
 </div>
