--- a/templates/page1.html
+++ b/templates/page1.html
@@ -37,7 +37,7 @@
 </div>
 
 
-<img id="clickButton" src="/static/images/shelly.png" style="width: 330px;" onclick="alert('Кнопка нажата!');">
+<img id="clickButton" src="/static/images/croco.png" style="width: 330px;" onclick="alert('Кнопка нажата!');">
 <br>
 
 
