--- a/templates/page7.html
+++ b/templates/page7.html
@@ -6,7 +6,7 @@
     <title>Улучшения</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
-<body>
+<body class="upgrade-page"> <!-- Добавлен класс friends-page -->
 
 <div class="up_text">
     <p>Улучшения</p>
